--- a/app/App.scss
+++ b/app/App.scss
@@ -47,6 +47,19 @@ h2 {
 p {
   color: var(--paragraph-color);
 }
+
+a {
+  color: var(--blue);
+  text-decoration: none;
+
+  &:active {
+    color: var(--blue-3);
+  }
+  &:visited {
+    color: var(--blue-4);
+  }
+}
+
 .container {
   width: var(--container-width);
   border-radius: var(--container-radius);
